Fix math expressions warnings for scss: wrap it with calc()

--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -43,15 +43,15 @@
   border-bottom-left-radius : $bottomleft;
   border-top-left-radius : $topleft;
   -webkit-background-clip : padding-box;
-  -moz-background-clip : padding;  
-  background-clip : padding-box; 
+  -moz-background-clip : padding;
+  background-clip : padding-box;
 }
 
 // .rounded(VALUE);
 @mixin rounded($radius:4px) {
   -webkit-border-radius : $radius;
   -moz-border-radius : $radius;
-  border-radius : $radius; 
+  border-radius : $radius;
 }
 
 // TYPOGRAPHY
@@ -61,25 +61,25 @@
 // ------------------------
 @mixin font-size($size) {
   font-size: 0px + $size;
-  font-size: 0rem + $size / $doc-font-size;
-  line-height: 0 + round($doc-line-height / $size*10000) / 10000;
+  font-size: 0rem + calc($size / $doc-font-size);
+  line-height: 0 + calc(round(calc($doc-line-height / $size*10000)) / 10000);
   margin-bottom: 0px + $doc-line-height;
-  margin-bottom: 0rem + ($doc-line-height / $doc-font-size);
+  margin-bottom: 0rem + calc($doc-line-height / $doc-font-size);
 }
 
 // Just the REMs
 // -------------
 @mixin font-rem($size) {
   font-size: 0px + $size;
-  font-size: 0rem + $size / $doc-font-size;
+  font-size: 0rem + calc($size / $doc-font-size);
 }
 
 // Just font-size and line-height
 // ------------------------------
 @mixin font($size) {
   font-size: 0px + $size;
-  font-size: 0rem + $size / $doc-font-size;
-  line-height: 0 + round($doc-line-height / $size*10000) / 10000;
+  font-size: 0rem + calc($size / $doc-font-size);
+  line-height: 0 + calc(round(calc($doc-line-height / $size*10000)) / 10000);
 }
 
 // GRADIENTS
@@ -92,7 +92,7 @@
   background-image  : -ms-linear-gradient(left, $startColor, $midColor, $endColor); 					 // IE10
   background-image  : -o-linear-gradient(left, $startColor, $midColor, $endColor); 						 // Opera 11.10
   background-image  : linear-gradient(left, $startColor, $midColor, $endColor); 							 // W3C
-  background-repeat : repeat-x; 
+  background-repeat : repeat-x;
 }
 
 // TRANSFORMATIONS
@@ -104,5 +104,5 @@
   -moz-transition : $transition;
   -ms-transition : $transition;
   -o-transition : $transition;
-  transition : $transition; 
+  transition : $transition;
 }
